@@ -1,5 +1,6 @@
 3.0.1
    * Fix localization
+   * Tweak window theme
    * Tweak week date in calendar (Emmanuele Bassi)
    * Tweak cursor themes (Andrea Fagiani)
    * Support user installed themes in $HOME (Andrea Fagiani)
